scribe-music/shadow.css
@import './elements/host.css';

@import '../attributes/data-beat.css';
@import '../attributes/data-divisor.css';
@import '../attributes/data-duration.css';

@import '../classes/instruction.css';
@import '../classes/accidental.css';
@import '../classes/stave.css';
@import '../classes/bar.css';
@import '../classes/clef.css';
@import '../classes/timesig.css';
@import '../classes/chord.css';
@import '../classes/note.css';
@import '../classes/head.css';
@import '../classes/ledge.css';
@import '../classes/rest.css';
@import '../classes/tuplet.css';
@import '../classes/beam.css';
@import '../classes/tie.css';
@import '../classes/lyric.css';
@import '../classes/svg.css';

:host {
    font-family: Jazz, JazzText, sans-serif;

    /* Width of standard black note head */
    --head-width:        0.3375;
    /* Space around accidentals */
    --acci-margin-left:  0.0875;
    --acci-margin-right: 0.0625;
    /* Space around notes */
    --note-margin-left:  0;
    --note-margin-right: 0;
    /* Space around rests */
    --rest-margin-left:  0;
    --rest-margin-right: 0;

    --signature-width: 2em;

    position: relative;
    /*display: grid;
    grid-template-columns: var(--signature-width) 1fr;
    grid-template-rows: min-content;
    align-content: start;
    justify-content: stretch;*/

    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    column-gap: 0;
    align-content: start;

    /* Make sure bars do not stretch vertically */
    align-items: start;
    z-index: 1;

    height: auto;
    padding-top: 1em;
    padding-bottom: 1em;
    padding-left: calc(var(--signature-width) - 1px);
}

:host([clef="drum"]) {
    --signature-width: 1em;
}

:host .note {
    /* Default height of stem */
    --stem-height:     1;
    /* Thickness of stem */
    --stem-width:      0.033;
    /* Alignment of root of stem relative to baseline */
    --stem-align-up:   0.03;
    --stem-align-down: -0.04;
}

:host .head[data-glyph="headX"] {
    --stem-align-up:   0.18;
    --stem-align-down: -0.14;
}

:host > .side {
    position: absolute;
    top: 0;
    bottm: 0;
    left: 0;
    padding-top: 1em;
    min-width: var(--signature-width);
    grid-column: 1;
    grid-row: 1;
    justify-self: stretch;
    align-self: stretch;
    max-height: 100%;
}



.side {
    z-index: 2;
    align-content: start;
    height: 100%;
    overflow: hidden;
}

.side > .signature-stave {
    width: auto;
    min-width: 100%;
}

.side > .bar + .bar > .clef {
    display: block;
}

:host > .bar {
    flex: 1 0 min-content;
    /* Make bar lines overlap */
    margin-left: calc(-1 * var(--bar-line-size, 1px));
}


svg {
    fill: currentcolor;
    /*background-color: rgba(200, 180, 30, 0.5);*/
}

svg > path {
    fill: inherit;
}

.side-bar {
    max-height: cqh;
    width: 2.125em;
}


/* Regular layout */

:host([layout="regular"]) > .bar,
:host([layout="spaced"]) > .bar  {
    min-width: calc((100cqw - var(--signature-width)) / 3);
}

@container host (min-width: 32em) {
    :host([layout="regular"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 3);
    }

    :host([layout="spaced"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 3);
    }
}

@container host (min-width: 48em) {
    :host([layout="regular"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 4);
    }

    :host([layout="spaced"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 4);
    }
}

@container host (min-width: 64em) {
    :host([layout="regular"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 6);
    }

    :host([layout="spaced"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 6);
    }
}

@container host (min-width: 80em) {
    :host([layout="regular"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 8);
    }

    :host([layout="spaced"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 8);
    }
}

@container host (min-width: 100em) {
    :host([layout="regular"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 10);
    }

    :host([layout="spaced"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 10);
    }
}

@container host (min-width: 120em) {
    :host([layout="regular"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 12);
    }

    :host([layout="spaced"]) > .bar {
        min-width: calc((100cqw - var(--signature-width)) / 12);
    }
}

